--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^8.2.9",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.2"
   },
